==> Huangqiuk/DT-C--computer/V0.0.2/USER/BLE/BleUart.c <==
#include "common.h"
#include "delay.h"
#include "system.h"
#include "timer.h"
#include "BleUart.h"
#include "Param.h"
#include "BleProtocol.h"
#include "stringOperation.h"

void BLE_UART_HwInit(uint32 baud)
{
	GPIO_InitType  GPIO_InitStructure;
	USART_InitType USART_InitStructure;
	NVIC_InitType  NVIC_InitStructure;	
		
	// 时钟配置 
	RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);		// 使能GPIO时钟

	// Initialize GPIO_InitStructure
	GPIO_InitStruct(&GPIO_InitStructure);

	// Configure USART Tx as alternate function push-pull
	GPIO_InitStructure.Pin            = GPIO_PIN_2;
	GPIO_InitStructure.GPIO_Current   = GPIO_DC_4mA;
	GPIO_InitStructure.GPIO_Slew_Rate = GPIO_Slew_Rate_Low;
	GPIO_InitStructure.GPIO_Pull      = GPIO_No_Pull;
	GPIO_InitStructure.GPIO_Mode      = GPIO_Mode_AF_PP;
	GPIO_InitStructure.GPIO_Alternate = GPIO_AF4_USART2;
	GPIO_InitPeripheral(GPIOA, &GPIO_InitStructure);

	// Configure USART Rx as alternate function push-pull and pull-up
	GPIO_InitStructure.Pin            = GPIO_PIN_3;
	GPIO_InitStructure.GPIO_Current   = GPIO_DC_4mA;
	GPIO_InitStructure.GPIO_Slew_Rate = GPIO_Slew_Rate_Low;
	GPIO_InitStructure.GPIO_Pull      = GPIO_Pull_Up;
	GPIO_InitStructure.GPIO_Mode      = GPIO_Mode_Input;
	GPIO_InitStructure.GPIO_Alternate = GPIO_AF4_USART2;
	GPIO_InitPeripheral(GPIOA, &GPIO_InitStructure);// 上拉输入

	// UART时钟使能
	RCC_EnableAPB1PeriphClk(RCC_APB1_PERIPH_USART2, ENABLE);		// 使能USART时钟
	
	RCC_EnableAPB1PeriphReset(RCC_APB1_PERIPH_USART2, ENABLE);		// 复位串口
	RCC_EnableAPB1PeriphReset(RCC_APB1_PERIPH_USART2, DISABLE); 	// 停止复位

	// 串口配置
	USART_InitStructure.BaudRate = baud;							// 一般设置为9600;
	USART_InitStructure.WordLength = USART_WL_8B; 					// 8位数据长度
	USART_InitStructure.StopBits = USART_STPB_1;					// 一个停止位
	USART_InitStructure.Parity = USART_PE_NO; 						// 无奇偶校验位
	USART_InitStructure.HardwareFlowControl = USART_HFCTRL_NONE; 	// 无硬件数据流控制
	USART_InitStructure.Mode = USART_MODE_RX | USART_MODE_TX; 		// 收发模式
	USART_Init(BLE_UART_TYPE_DEF, &USART_InitStructure);			// 初始化串口

	// 中断配置
	NVIC_InitStructure.NVIC_IRQChannel = BLE_UART_IRQn_DEF;		// 使能串口中断
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;	// 先占优先级2级
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;			// 从优先级1级
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; 			// 使能外部中断通道
	NVIC_Init(&NVIC_InitStructure); 							// 根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器
 
	USART_ConfigInt(BLE_UART_TYPE_DEF, USART_INT_RXDNE, ENABLE);	// 开启中断
 
	USART_Enable(BLE_UART_TYPE_DEF, ENABLE);						// 使能串口
	
}

void BLE_UART_IR_StartSendData(uint8 data)
{
	// 先读SR，再填充DR会把TC标志清掉
	USART_GetFlagStatus(BLE_UART_TYPE_DEF, USART_FLAG_TXC);

	// 发送一个字节
	USART_SendData(BLE_UART_TYPE_DEF, data);

	// 打开发送完成中断
	USART_ConfigInt(BLE_UART_TYPE_DEF, USART_INT_TXC, ENABLE);	
}

void BLE_UART_BC_SendData(uint8 data)
{	
	// 防止丢失第一个字节(清除空标志位,务必加) 
	USART_ClrFlag(BLE_UART_TYPE_DEF, USART_FLAG_TXC);		

	// 填充数据
	USART_SendData(BLE_UART_TYPE_DEF, data);

	// 未发送完，持续等待
	while(USART_GetFlagStatus(BLE_UART_TYPE_DEF, USART_FLAG_TXC) != SET);		
}
