==> Huangqiuk/DT-C--computer/V0.0.3/User/BleUart.c <==
#include "common.h"
#include "delay.h"
#include "system.h"
#include "timer.h"
#include "BleUart.h"
#include "stringOperation.h"
#include "Spiflash.h"
#include "param.h"

void BLE_UART_HwInit(uint32 baud)
{
	// 打开时钟
	rcu_periph_clock_enable(RCU_GPIOA);
	gpio_init(GPIOA, GPIO_MODE_AF_PP, GPIO_OSPEED_2MHZ, GPIO_PIN_9);
	
	gpio_init(GPIOA, GPIO_MODE_IPU, GPIO_OSPEED_2MHZ, GPIO_PIN_10);

	// UART时钟配置
	rcu_periph_clock_enable(RCU_USART0);
	usart_deinit(BLE_UART_TYPE_DEF);									// 复位串口
		
	// 串口配置
	usart_baudrate_set(BLE_UART_TYPE_DEF, baud);						// 波特率
	usart_word_length_set(BLE_UART_TYPE_DEF, USART_WL_8BIT);			// 8位数据位
	usart_stop_bit_set(BLE_UART_TYPE_DEF, USART_STB_1BIT); 				// 一个停止位
	usart_parity_config(BLE_UART_TYPE_DEF, USART_PM_NONE); 				// 无奇偶校验
	usart_hardware_flow_rts_config(BLE_UART_TYPE_DEF, USART_RTS_DISABLE); // 无硬件数据流控制
	usart_hardware_flow_cts_config(BLE_UART_TYPE_DEF, USART_CTS_DISABLE);
	usart_transmit_config(BLE_UART_TYPE_DEF, USART_TRANSMIT_ENABLE);	// 使能发射
	usart_receive_config(BLE_UART_TYPE_DEF, USART_RECEIVE_ENABLE); 		// 使能接收

	// 中断配置
	nvic_irq_enable(BLE_UART_IRQn_DEF, 2, 1);

	usart_interrupt_enable(BLE_UART_TYPE_DEF, USART_INT_RBNE); 			// 开启中断

	usart_enable(BLE_UART_TYPE_DEF);									// 使能串口 

//====================================================================================================================

	rcu_periph_clock_enable(RCU_GPIOC);

	gpio_init(GPIOA, GPIO_MODE_OUT_PP, GPIO_OSPEED_2MHZ, GPIO_PIN_11);
	gpio_init(GPIOA, GPIO_MODE_OUT_PP, GPIO_OSPEED_2MHZ, GPIO_PIN_12);

	// 释放复位
	BLE_RST_RELEASE();
	// 允许开始广播
	BLE_EN_ENABLE();

	gpio_init(GPIOC, GPIO_MODE_OUT_PP, GPIO_OSPEED_2MHZ, GPIO_PIN_12);

	// 上电后一直处于发送准备状态
	gpio_bit_reset(GPIOC, GPIO_PIN_12);
}

void BLE_UART_BC_SendData(uint8 data)
{	
	// 防止丢失第一个字节(清除空标志位,务必加) 
	usart_flag_get(BLE_UART_TYPE_DEF, USART_FLAG_TC);		

	// 填充数据
	usart_data_transmit(BLE_UART_TYPE_DEF, data);

	// 未发送完，持续等待
	while(usart_flag_get(BLE_UART_TYPE_DEF, USART_FLAG_TC) != SET);		
}

void BLE_UART_IR_StartSendData(uint8 data)
{
	// 先读SR，再填充DR会把TC标志清掉
	usart_flag_get(BLE_UART_TYPE_DEF, USART_FLAG_TC);

	// 发送一个字节
	usart_data_transmit(BLE_UART_TYPE_DEF, data);

	// 打开发送完成中断
	usart_interrupt_enable(BLE_UART_TYPE_DEF, USART_INT_TC);	
}
